test/corpus/fail/M0068.mo
=========
M0068.mo
=========

ignore actor {}

---

(source_file
  (exp_dec
    (ignore_exp
      (obj_dec
        (obj_sort)
        (obj_body)))))
